--- a/css.css
+++ b/css.css
@@ -6,19 +6,25 @@ h1 {
     background: blue;
     font-size: 32pt;
     color: green;
+    
 }
 
 .paragraph-2 {
     border: 10px solid rgb(0, 0, 0);
     border-radius: 100px;
     font-size: 24pt;
-    padding: 100px 100px 100px 100px ;
+    padding: 100px 100px 100px 100px;
+    
 }
 
 .paragraph-3 {
     font-weight: bold;
-    font-size: 22px;
+    font-size: 24px;
     font-family: Courier New;
+    color: green;
+    font-style:oblique;
+    text-shadow: green;
+    text-align: center;
 }
 
 /* body{
