--- a/css.css
+++ b/css.css
@@ -21,7 +21,7 @@ h1 {
     font-weight: bold;
     font-size: 24px;
     font-family: Courier New;
-    color: green;
+    color: rgb(162, 0, 226);
     font-style:oblique;
     text-shadow: green;
     text-align: center;
